--- a/.gitignore
+++ b/.gitignore
@@ -163,5 +163,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-add_app.txt
+.add_app.txt
 # End of https://www.toptal.com/developers/gitignore/api/python
